[package]
name = "rate-limit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
doctest = false
bench = false

[dependencies]
axum = { version = "0.5", optional = true }
thiserror = "1.0.38"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }

[features]
axum = ["dep:axum"]
